
[metadata]
name = pyregistry
version = 0.2.1
author = Mark Gordon
author_email = msg@clinc.com
description = Python library for interacting with container image registries
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/clinc/PyRegistry
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
install_requires =
    requests>=2.0,<3
python_requires = >=3.5
