
[metadata]
name = pyregistry
version = 0.3.0
author = Mark Gordon
author_email = msg555@gmail.com
description = Python library for interacting with container image registries
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/msg555/pyregistry
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages =
  pyregistry
python_requires = >=3.6
install_requires =
  aiohttp>=3.8,<4
  pydantic>=1.8,<2
include-package-data = True

[options.package_data]
pyregistry = py.typed
